// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSketch > generates starter project snapshots > Blink 1`] = `
"// Blink
// Generated by Arduino Blocks Lab.
// Target board: Arduino Uno (arduino:avr:uno)

void setup() {
  pinMode(13, OUTPUT);
}

void loop() {
  digitalWrite(13, HIGH);
  delay(1000);
  digitalWrite(13, LOW);
  delay(1000);
}"
`;

exports[`generateSketch > generates starter project snapshots > Button LED 1`] = `
"// Button LED
// Generated by Arduino Blocks Lab.
// Target board: Arduino Uno (arduino:avr:uno)

void setup() {
  pinMode(2, INPUT_PULLUP);
  pinMode(13, OUTPUT);
}

void loop() {
  if (digitalRead(2) == LOW) {
    digitalWrite(13, HIGH);
  } else {
    digitalWrite(13, LOW);
  }
}"
`;

exports[`generateSketch > generates starter project snapshots > Distance Meter 1`] = `
"// Distance Meter
// Generated by Arduino Blocks Lab.
// Target board: Arduino Uno (arduino:avr:uno)

void setup() {
  Serial.begin(9600);
  pinMode(6, OUTPUT);
  pinMode(7, INPUT);
}

void loop() {
  digitalWrite(6, LOW);
  delayMicroseconds(2);
  digitalWrite(6, HIGH);
  delayMicroseconds(10);
  digitalWrite(6, LOW);
  long duration = pulseIn(7, HIGH);
  float distanceCm = duration * 0.0343 / 2.0;
  Serial.print("distance_cm: ");
  Serial.println(distanceCm);
  delay(250);
}"
`;

exports[`generateSketch > generates starter project snapshots > NeoPixel Glow 1`] = `
"// NeoPixel Glow
// Generated by Arduino Blocks Lab.
// Target board: Arduino Uno (arduino:avr:uno)

#include <Adafruit_NeoPixel.h>

Adafruit_NeoPixel neopixel_strip_8(8, 5, NEO_GRB + NEO_KHZ800);

void setup() {
  neopixel_strip_8.begin();
  neopixel_strip_8.show();
}

void loop() {
  neopixel_strip_8.fill(neopixel_strip_8.Color(24, 160, 120));
  neopixel_strip_8.show();
  delay(500);
  neopixel_strip_8.fill(neopixel_strip_8.Color(255, 80, 64));
  neopixel_strip_8.show();
  delay(500);
}"
`;

exports[`generateSketch > generates starter project snapshots > Servo Knob 1`] = `
"// Servo Knob
// Generated by Arduino Blocks Lab.
// Target board: Arduino Uno (arduino:avr:uno)

#include <Servo.h>

Servo servo_3;

void setup() {
  servo_3.attach(9);
}

void loop() {
  int knobValue = analogRead(A0);
  int servoAngle = map(knobValue, 0, 1023, 0, 180);
  servo_3.write(servoAngle);
}"
`;

exports[`generateSketch > generates starter project snapshots > Weather LCD 1`] = `
"// Weather LCD
// Generated by Arduino Blocks Lab.
// Target board: Arduino Uno (arduino:avr:uno)

#include <DHT.h>
#include <Wire.h>
#include <LiquidCrystal_I2C.h>

DHT dht22_6(4, DHT22);
LiquidCrystal_I2C lcd_1602_i2c_7(0x27, 16, 2);

void setup() {
  Serial.begin(9600);
  dht22_6.begin();
  lcd_1602_i2c_7.init();
  lcd_1602_i2c_7.backlight();
}

void loop() {
  float humidity = dht22_6.readHumidity();
  float temperatureC = dht22_6.readTemperature();
  Serial.print("humidity: ");
  Serial.print(humidity);
  Serial.print(" temperature_c: ");
  Serial.println(temperatureC);
  lcd_1602_i2c_7.clear();
  lcd_1602_i2c_7.setCursor(0, 0);
  lcd_1602_i2c_7.print("Temp + humidity");
  delay(1500);
}"
`;
